# DXStarter

./: .clang-format  .cursorrules  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  DEVLOG.md  README.md  TODO.md  keeper.ps1  vcpkg.json
.cursor/: BUGBOT.md  SKILLS.md
.github/actions/vswhere-vcpkg/: action.yml
.github/workflows/: pr_to_main.yml
Examples/MaterialBatching/: README.md
Examples/MaterialBatching/Src/: Main.cpp
Examples/Materials/: Base.rsign.hlsl  ColorBlue.pixel.hlsl  ColorRed.pixel.hlsl  LocalPosition.vertx.hlsl  WorldPosition.rsign.hlsl  WorldPosition.vertx.hlsl
Examples/MeshBatching/Src/: Main.cpp
Examples/PainTriangle/Materials/: Default.vertx.hlsl
Examples/PainTriangle/Src/: Main.cpp
Examples/PlainTriangle/: README.md
Examples/PlainTriangle/Src/: Main.cpp
Examples/RotatedTriangle/Src/: Main.cpp
Examples/WorldSpace/: README.md
Examples/WorldSpace/Src/: Main.cpp
Resources/Shaders/: Default.pixel.hlsl
docs/: dev_log.md  dev_steps.md  devlog.md
src/: App.cpp  App.h  Main.cpp
src/Graphics/: ByteUtil.h  ColorBuffer.h  CommandAllocator.cpp  CommandAllocator.h  CommandList.h  CommandList10.cpp  CommandList10.h  CommandQueue.cpp  CommandQueue.h  DebugLayer.cpp  DebugLayer.h  DescriptorHeap.h  Device.cpp  Device.h  GraphicsContext.cpp  GraphicsContext.h  PipelineState.h  Renderer.cpp  Renderer.h  RootSignature.h  SwapChain.cpp  SwapChain.h
src/Graphics/Material/: Material.cpp  Material.h  MaterialBuilder.cpp  MaterialBuilder.h  MaterialRegistry.cpp  MaterialRegistry.h  PipelineState.h  RootSignature.h
src/Graphics/Mesh/: Mesh.h  MeshInstance.cpp  MeshInstance.h
src/Graphics/Resource/: ByteBuffer.h  ColorBuffer.h  DeviceBuffer.h  Resource.h  UploadBuffer.cpp  UploadBuffer.h
src/Graphics/Resources/: ByteBuffer.h  ColorBuffer.h  DefaultBuffer.h  Resource.h  UploadBuffer.cpp  UploadBuffer.h
src/Graphics/Scene/: Node.cpp  Node.h
src/IO/: ByteBuffer.cpp  ByteBuffer.h  Bytes.cpp  Bytes.h  Paths.cpp  Paths.h
src/Includes/: ComIncl.h  GraphicsIncl.h  MathIncl.h  WindowsIncl.h
src/Logging/: Logging.h
src/Math/: Angle.h  Matrix.h  Vector.h
src/Mesh/: Mesh.h  MeshInstance.cpp  MeshInstance.h
src/Scene/: Node.h
src/Window/: DXView.cpp  DXView.h  MainWindow.cpp  MainWindow.h  WindowState.cpp  WindowState.h
